# digital-signal-intelligence

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUGMENT.md  An Agentic Future - Global Pricing Methodlogy.docx  Broker_Coe_Demo.jsx  CHANGELOG.md  CONTRIBUTING.md  DSI_UPGRADE_PLAN.md  Dockerfile  LICENSE  PLAN.md  README.md  SKILL.md  alembic.ini  bundle_project.py  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-otel.txt  requirements.txt  seed_dsi_bench.py  seed_v5.py  setup.py  synthetic_generator.py
.github/workflows/: calibration-nightly.yml  ci.yml  config-diff.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_schema_optimisation.py  003_rename_id_to_code.py  004_normalise_signal_tables.py  005_add_group_weight_and_loss_group_scores.py  005_add_ilf_audit_columns.py  005a_add_ilf_audit_columns.py  006_add_base_premium_derivation.py  007_add_commercial_and_risk_terms.py  007_add_config_snapshots.py  008_add_config_snapshots.py  009_add_final_composite_score.py  010_normalise_model_versions.py  011_world_engine_tables.py  012_auth_foundation.py  013_audit_system.py  014_loss_data.py  015_caf_on_model_versions.py  016_recalibration.py  017_admin_metrics.py  018_config_versions.py  019_user_invitations.py  020_push_notifications.py  021_signal_provenance.py  022_drift_referrals.py  023_evidence_grade.py  024_validator_verdicts.py  025_grade_calibration.py  026_signal_stability.py  027_primitive_type.py  028_entity_events.py  029_disclosure_packet.py  030_v8_broker_data_model.py  031_v8_peer_cohort.py  032_v8_referral_messages.py  033_user_invitation_broker_id.py
analytics/: signal_analytics.py
api/: __init__.py  auth.py  batch.py  cache.py  cohort.py  config.py  middleware.py  openapi.yaml  requirements.txt  server.py
builder/: signal_library.py
commercial/entities/: direct_fi_pi.yaml  eu_fronted.yaml  mga_us_cyber.yaml  syndicate_example.yaml  syndicate_lead.yaml  tower_us_energy.yaml
coverages/: README.md  README_DOC_GENERATOR.md  doc_generator.py  master_config_layout.yaml
coverages/aerospace/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/captive/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/casualty/: MATURATION_STATUS.md  config.yaml  logic.md
coverages/construction/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/crop/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/cyber/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  config_rework_v2.yaml  logic.md  master_config_layout.yaml
coverages/do/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/energy/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/env_liab/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/event/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/fi/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/fpr/: MATURATION_STATUS.md  config.yaml  logic.md
coverages/marine/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/medprof/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/pi/: MATURATION_STATUS.md  appetite.yaml  config.yaml  config_rework.yaml  logic.md
coverages/prodlib/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/property/: MATURATION_STATUS.md  config.yaml  logic.md
coverages/pvt/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/reinsurance/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/specie/: MATURATION_STATUS.md  SPEC.md  __init__.py  config.yaml  logic.md
coverages/teo/: SPEC.md  logic.md  (+3 more)
demo/: README.md  __init__.py  index.html  server.py
deploy/: README.md  coverage_deployment_guide.md  deployment_guide.md
development/: README.md  bundle_code.py  bundle_pyfile.py  client_assessment_samples.md  demo_gem.html  dsi-demo-foundation.html  dsi-demo.html  dsi_calibration.py  dsi_calibration_guardrails.md  dsi_gem3.html  dsi_guardrails.py  frontend_src_full_codebase.txt  infrastructure_api__full_codebase.txt  retrospective_methodology.md
development_docs/: README.md  dsi_retrospective_case_study_detail.md  historical_loss_analysis.md  signal_mapping_to_historical_loss.md
docs/: EXTRACTOR_IMPLEMENTATION_PLAN.md  Foundational Principles.md  README.md  generate_technical_docs.js  phase_8.md
examples/: README.md  example_api_client.py  example_cyber_pricing.py  run_aerospace.py  run_cyber.py  run_do.py  run_energy.py  run_fi.py  run_marine.py  utils.py
exposure/: README.md
frontend/: .env.example  .gitignore  README.md  next.config.ts
infrastructure/: __init__.py
layers/: __init__.py
loss/: README.md
rust/dsi-core/: Cargo.toml  pyproject.toml
rust/dsi-core/benches/: graph_bench.rs
rust/dsi-core/python/dsi_core/: __init__.py
rust/dsi-core/src/: derivatives.rs  graph.rs  lib.rs  scoring.rs  validation.rs
rust/dsi-sim/: Cargo.toml
rust/dsi-sim/benches/: simulation_bench.rs
rust/dsi-sim/src/: config.rs  formula.rs  lib.rs  models.rs  portfolio.rs  shock.rs  simulation.rs
schemas/: organisational_graph.yaml
scripts/: add_evidence_grade_policy.py  lint_evidence_completeness.py
seed/: README.md  __init__.py  __main__.py  bench.py  cli.py  demo_reset.py  reset.py  synthetic.py  v5.py  verify.py
signal_architecture/: __init__.py
signals/: __init__.py  types.py
technical_pricing/: README.md  __init__.py
tests/: README.md  assess_completeness.py  comprehensive_assessor.py  conftest.py  conftest_layers.py  run_tests.py
workflow/: README v2.md  README.md  README_v2.md  create_sql.sql  dsi_entity_to_assessment.py  dsi_persistence.py  dsi_workflow.py  manager.py  workings.py
world_engine/: __init__.py  maturity.py  scheduler.py  types.py
(+1926 files in other folders)
