[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dsi-core"
version = "0.1.0"
description = "DSI performance-critical components (Rust + PyO3)"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dsi_core"
